--- a/main.css
+++ b/main.css
@@ -1,5 +1,63 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@500;700&display=swap");
 
+:root {
+  --blue: #31c3bd;
+  --blue-hover: #65e9e4;
+  --yellow: #f2b137;
+  --yellow-hover: #ffc860;
+  --navy: #1a2a33;
+  --navy-hover: #1f3641;
+  --silver: #a8bfc9;
+  --silver-hover: #dbe8ed;
+}
+
 * {
   font-family: "Outfit", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--navy);
+}
+
+.app {
+  text-align: center;
+  width: 327px;
+  height: 429px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons button {
+  margin-top: 16px;
+  margin-bottom: 16px;
+  height: 56px;
+  width: 100%;
+  border-radius: 15px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20.16px;
+  letter-spacing: 1px;
+  color: var(--navy);
+  text-transform: uppercase;
+}
+
+.buttons button:first-child {
+  background-color: var(--yellow);
+  box-shadow: inset 0px -8px 0px #cc8b13;
+}
+
+.buttons button:last-child {
+  background-color: var(--blue);
+  box-shadow: inset 0px -8px 0px #118c87;
 }
