--- a/main.css
+++ b/main.css
@@ -130,10 +130,276 @@ body {
 
 .game-grid {
   text-align: center;
-  width: 327px;
-  height: 429px;
+  width: 328px;
+  height: 516px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  /*display: none;*/
+}
+
+.xo {
+  width: 71.97px;
+  height: 32px;
+}
+
+.flexbox {
+  width: 328px;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.turn-screen {
+  display: flex;
+  width: 96px;
+  height: 40px;
+  border-radius: 5px;
+  background-color: var(--navy-hover);
+  color: var(--silver);
+  margin-right: 30px;
+  justify-content: center;
+  align-items: center;
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  box-shadow: inset 0px -4px 0px #10212A;
+}
+
+.x-turn {
+  margin-right: 9px;
+}
+
+.refresh-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  padding: auto;
+  border-radius: 5px;
+  background-color: var(--silver);
+  box-shadow: inset 0px -4px 0px #6B8997;
+  border: none;
+  cursor: pointer;
+}
+
+.refresh-button:hover {
+  background-color: var(--silver-hover);
+
+}
+
+.refresh-button > img {
+  width: 15.38px;
+  height: 15.38px;
+}
+
+.squares {
+  width: 96px;
+  height: 96px;
+  background-color: var(--navy-hover);
+  border-radius: 8px;
+  box-shadow: inset 0px -8px 0px #10212A;
+}
+
+.grid-container {
+  width: 328px;
+  height: 328px;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 40px;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  color: white;
+  margin-top: 20px;
+}
+
+.you {
+  width: 96px;
+  height: 64px;
+  border-radius: 8px;
+  margin-left: -10px;
+  background-color: var(--blue);
+  padding-top: 6px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 25px;
+  text-align: center;
+  letter-spacing: 1.25px;
+  color: var(--navy-hover);
+  text-transform: uppercase;
+}
+
+.ties {
+  width: 96px;
+  height: 64px;
+  border-radius: 8px;
+  background-color: var(--silver);
+  padding-top: 6px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 25px;
+  text-align: center;
+  letter-spacing: 1.25px;
+  color: var(--navy-hover);
+  text-transform: uppercase;
+}
+
+.cpu {
+  width: 96px;
+  height: 64px;
+  border-radius: 8px;
+  margin-right: -10px;
+  background-color: var(--yellow);
+  padding-top: 6px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 25px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1.25px;
+  color: var(--navy-hover);
+}
+
+p {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.75px;
+}
+
+.icon-x {
+  background-image: url("./assets/icon-x.svg ");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px 40px;
+  overflow: auto;
+  cursor: pointer;
+}
+
+.icon-o {
+  background-image: url("./assets/icon-o.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px 40px;
+  cursor: pointer;
+}
+
+.icon-x:hover {
+  background-image: url("./assets/icon-x-outline.svg");
+}
+
+
+.icon-o:hover {
+  background-image: url("./assets/icon-o-outline.svg");
+}
+
+
+
+.modal {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0,0,0,0.5);
+  mix-blend-mode: normal;
+  display: none;
+}
+
+.modal-container {
+  width: 100%;
+  height: 228px;
+  position: absolute;
+  margin-top: 220px;
+  margin-bottom: 219px;
+  background-color: var(--navy-hover);
+}
+
+.first-message {
+  color: var(--silver);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0.875px;
+  text-transform: uppercase;
+  margin-top: 40px;
+}
+
+.second-message {
+  display: flex;
+  justify-content: center;
+  color: var(--yellow);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 18px;
+  letter-spacing: 0.875px;
+  text-transform: uppercase;
+  margin-top: 16px;
+  align-items: center;
+}
+
+.image-second-message {
+  width: 30px;
+  margin-right: 8px;
+}
+
+.modal-button-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
+}
+
+.quit-button {
+  width: 76px;
+  height: 52px;
+  background-color: var(--silver);
+  background: #A8BFC9;
+  box-shadow: inset 0px -4px 0px #6B8997;
+  border-radius: 10px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  color: var(--navy);
+  text-transform: uppercase;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.quit-button:hover {
+  background-color: var(--silver-hover);
+}
+
+.next-round-button {
+  width: 146px;
+  height: 52px;
+  background-color: var(--yellow);
+  box-shadow: inset 0px -4px 0px #CC8B13;
+  border-radius: 10px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  color: var(--navy);
+  text-transform: uppercase;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.next-round-button:hover {
+  background-color: var(--yellow-hover);
 }
