--- a/css/modal.css
+++ b/css/modal.css
@@ -8,7 +8,7 @@
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.5);
   mix-blend-mode: normal;
-  /* display: none; */
+  display: none;
 }
 
 .modal-container {
