Add JS file with simple event listener for the first grid cell

--- a/css/game.css
+++ b/css/game.css
@@ -72,6 +72,7 @@
   background-color: var(--navy-hover);
   border-radius: 8px;
   box-shadow: inset 0px -8px 0px #10212a;
+  cursor: pointer;
 }
 
 .grid-container {
